@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-June 17, 2002 - February 9, 2005
+June 17, 2002 - February 13, 2005
 
 
 * Design and Coding:
@@ -118,6 +118,9 @@ June 17, 2002 - February 9, 2005
   * Dutch
     Herman Bruyninckx <Herman.Bruyninckx@mech.kuleuven.ac.be>
     Geert Stams <geertstams@wanadoo.nl>
+
+  * Estonian
+    Henrik Pihl <henrik@saarlane.ee>
 
   * Finnish
     Tarmo Toikkanen <tarmo.toikkanen@iki.fi>
