@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                                January 16, 2005
+                               February 13, 2005
 
    ---------------------------------------------------------------------------
 
@@ -307,6 +307,8 @@ Windows Users
                |--------------------+------------------+---------|
                |dutch               |nederlands        |         |
                |--------------------+------------------+---------|
+               |estonian            |                  |         |
+               |--------------------+------------------+---------|
                |finnish             |suomi             |         |
                |--------------------+------------------+---------|
                |french              |francais          |         |
@@ -564,6 +566,8 @@ Available Languages
        |da_DK          |Dansk              |Danish               |
        |---------------+-------------------+---------------------|
        |de_DE          |Deutsch            |German               |
+       |---------------+-------------------+---------------------|
+       |ee_ET          |                   |Estonian             |
        |---------------+-------------------+---------------------|
        |el_GR.UTF8 (*) |                   |Greek                |
        |---------------+-------------------+---------------------|
