@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>January 16, 2005</p>
+<p>February 13, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -424,6 +424,11 @@ New Breed Software</p>
     <tr>
       <td><code>dutch</code></td>
       <td><code>nederlands</code></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td><code>estonian</code></td>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -870,6 +875,11 @@ New Breed Software</p>
     <td><code>de_DE</code></td>
     <td>Deutsch</td>
     <td>German</td>
+  </tr>
+  <tr>
+    <td><code>ee_ET</code></td>
+    <td>&nbsp;</td>
+    <td>Estonian</td>
   </tr>
   <tr>
     <td><code>el_GR.UTF8</code> (*)</td>
